tests/expectations/compiler/structs/external_submodule_fn_not_callable_fail.out
'helper' is not defined in 'child.aleo'.

---
Note: Treating dependencies as Aleo produces different results:

Error [ETYC0372005]: Unknown function `child.aleo::utils::helper`
    --> compiler-test:7:16
     |
   7 |         return child.aleo::utils::helper(x);
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^
